tests/ui/rename/test_rename_unexpected_lit_type.stderr
error: Unexpected literal type `byte string`
 --> $DIR/test_rename_unexpected_lit_type.rs:5:24
  |
5 |     #[shorthand(rename(b"binary"))]
  |                        ^^^^^^^^^
