tests/ui/rename/test_rename_unexpected_lit_type.rs
use shorthand::ShortHand;

#[derive(ShortHand)]
struct Command {
    #[shorthand(rename(b"binary"))]
    value: String,
}

fn main() {}
